[package]
name = "quocktail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive", "unicode"] }
color-eyre = "0.6.2"
convert_case = "0.6.0"
enable-ansi-support = "0.2.1"
gray_matter = "0.2.6"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
rand = { version = "0.8.5", features = ["alloc"] }
supports-color = "3.0.0"
walkdir = "2.4.0"
